--- a/project/app/src/main/res/layout/fragment_search_nearby.xml
+++ b/project/app/src/main/res/layout/fragment_search_nearby.xml
@@ -3,12 +3,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".search_nearby">
+    android:clickable="true"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".fragment_search_nearby">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/fui_transparent"
+    android:orientation="vertical">
+
+
+        <ListView
+            android:id="@+id/nearby_result"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:background="#E4D4CA"
+            android:maxHeight="300dp" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#71000000"
+            android:onClick="showFriendlist" />
+</LinearLayout>
 
 </FrameLayout>
