--- a/project/app/src/main/res/layout/activity_profile.xml
+++ b/project/app/src/main/res/layout/activity_profile.xml
@@ -53,12 +53,17 @@
             android:id="@+id/button1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/fui_bgFacebook"
+            style="@style/FirebaseUI.Button"
             android:text="send message" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@color/fui_bgFacebook"
+            style="@style/FirebaseUI.Button"
             android:text="@string/posts" />
     </LinearLayout>
 
