--- a/project/app/src/main/res/layout/activity_post_display.xml
+++ b/project/app/src/main/res/layout/activity_post_display.xml
@@ -64,6 +64,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="20dp"
+                android:paddingBottom="40dp"
                 android:textSize="20dp"
                 tools:layout_editor_absoluteX="16dp"
                 tools:layout_editor_absoluteY="210dp" />
@@ -71,7 +72,8 @@
             <ImageView
                 android:id="@+id/image"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-40dp"/>
 
         </LinearLayout>
 
