--- a/project/app/src/main/res/layout/fragment_modify.xml
+++ b/project/app/src/main/res/layout/fragment_modify.xml
@@ -79,7 +79,7 @@
         android:inputType="date"
         android:onClick="setBirthday"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneBox" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_phone_til" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/txt_username_til"
@@ -139,18 +139,6 @@
 
 
 
-        <LinearLayout
-            android:id="@+id/phoneBox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/txt_email_til"
-            android:layout_marginTop="3dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="+353"/>
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_weight="2"
                 android:id="@+id/txt_phone_til"
@@ -172,7 +160,6 @@
                     tools:layout_editor_absoluteY="494dp" />
             </com.google.android.material.textfield.TextInputLayout>
 
-        </LinearLayout>
 
 
     <ImageView
