--- a/project/app/src/main/res/layout/activity_post_my.xml
+++ b/project/app/src/main/res/layout/activity_post_my.xml
@@ -19,8 +19,7 @@
     <ListView
         android:id="@+id/lv_post_my"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/common_google_signin_btn_text_light_disabled">
+        android:layout_height="match_parent">
 
     </ListView>
 
