--- a/project/app/src/main/res/menu/toolbar_friendlist.xml
+++ b/project/app/src/main/res/menu/toolbar_friendlist.xml
@@ -3,22 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-    android:title="Map"
+    android:title="@string/map"
     android:id="@+id/map_check"
     android:icon="@drawable/icon_location"
     app:showAsAction="always" />
 
-    <item android:title="Search"
+    <item android:title="@string/search"
         android:id="@+id/search"
         app:showAsAction="ifRoom"
         android:icon="@drawable/icon_magnify">
         <menu>
             <item
                 android:id="@+id/searchByEmail"
-                android:title="Search by Email"/>
+                android:title="@string/search_by_email"/>
             <item
                 android:id="@+id/searchNearby"
-                android:title="Search Nearby"/>
+                android:title="@string/search_nearby"/>
         </menu>
     </item>
 </menu>
