--- a/project/app/src/main/res/drawable/list_item.xml
+++ b/project/app/src/main/res/drawable/list_item.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#A83612"/>
+            <solid android:color="#989898"/>
             <corners android:radius="10dp"/>
         </shape>
     </item>
