--- a/project/app/src/main/res/layout/point_item_my.xml
+++ b/project/app/src/main/res/layout/point_item_my.xml
@@ -16,7 +16,8 @@
     <TextView
         android:id="@+id/dis_my_loc"
         android:layout_width="match_parent"
-        android:layout_height="52dp"
+        android:layout_height="wrap_content"
+        android:minHeight="52dp"
         android:paddingLeft="15dp"
         android:text="TextView"
         android:textSize="24sp" />
