--- a/project/app/src/main/res/menu/toolbar_friendlist.xml
+++ b/project/app/src/main/res/menu/toolbar_friendlist.xml
@@ -17,8 +17,12 @@
                 android:id="@+id/searchByEmail"
                 android:title="@string/search_by_email"/>
             <item
+                android:id="@+id/searchByPhone"
+                android:title="Search by Phone"/>
+            <item
                 android:id="@+id/searchNearby"
                 android:title="@string/search_nearby"/>
+
         </menu>
     </item>
 </menu>
