--- a/project/app/src/main/res/layout/activity_channel.xml
+++ b/project/app/src/main/res/layout/activity_channel.xml
@@ -285,7 +285,7 @@
             android:layout_height="90dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:onClick="toPostLocal"
+            android:onClick="toPost8"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="116dp" />
     </LinearLayout>
@@ -311,7 +311,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/icon_location" />
+            app:srcCompat="@drawable/icon_life" />
     </LinearLayout>
 
     <LinearLayout
@@ -336,7 +336,7 @@
             android:layout_weight="1"
             android:background="@android:color/transparent"
             android:gravity="center"
-            android:text="⑧ Local"
+            android:text="⑧ Life"
             android:textAllCaps="false" />
     </LinearLayout>
 
