--- a/project/app/src/main/res/layout/activity_map_main.xml
+++ b/project/app/src/main/res/layout/activity_map_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/fui_bgFacebook"
     tools:context=".map_main">
 
     <fragment
@@ -11,52 +12,54 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout11"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linearUp"
         tools:context=".map_main" />
 
     <LinearLayout
         android:id="@+id/linearLayout11"
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:layout_marginTop="25dp"
         android:background="@color/fui_bgFacebook"
         android:orientation="horizontal"
-        android:layout_marginTop="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
+
         <TextView
             android:id="@+id/textView"
+            style="@style/FirebaseUI.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="14dp"
-            style="@style/FirebaseUI.Button"
             android:background="@color/fui_bgFacebook"
             android:text="@string/nsite"
-            android:textAllCaps="false"/>
+            android:textAllCaps="false"
+            android:textSize="14dp" />
+
         <TextView
             android:id="@+id/textView3"
+            style="@style/FirebaseUI.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="14dp"
-            style="@style/FirebaseUI.Button"
             android:background="@color/fui_bgFacebook"
             android:text="@string/ncheck"
-            android:textAllCaps="false"/>
+            android:textAllCaps="false"
+            android:textSize="14dp" />
+
         <TextView
             android:id="@+id/textView4"
+            style="@style/FirebaseUI.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="14dp"
-            style="@style/FirebaseUI.Button"
             android:background="@color/fui_bgFacebook"
             android:text="@string/nlist"
-            android:textAllCaps="false"/>
+            android:textAllCaps="false"
+            android:textSize="14dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -68,35 +71,73 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
+
         <ImageButton
             android:id="@+id/btn_current_map"
             style="@style/FirebaseUI.Button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:paddingTop="2dp"
             android:background="@android:color/transparent"
-            android:onClick="map_GetCurrentLocation" />
+            android:onClick="map_GetCurrentLocation"
+            android:paddingTop="2dp" />
+
         <ImageButton
             android:id="@+id/btn_check_map"
             style="@style/FirebaseUI.Button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:paddingTop="2dp"
             android:background="@android:color/transparent"
-            android:scaleType="fitCenter"
-            android:onClick="map_CheckPoints"/>
+            android:onClick="map_CheckPoints"
+            android:paddingTop="2dp"
+            android:scaleType="fitCenter" />
+
         <ImageButton
             android:id="@+id/btn_pointsList"
             style="@style/FirebaseUI.Button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:paddingTop="2dp"
             android:background="@android:color/transparent"
-            android:scaleType="fitCenter"
-            android:onClick="map_listView"/>
+            android:onClick="map_listView"
+            android:paddingTop="2dp"
+            android:scaleType="fitCenter" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearUp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="9"
+            android:text="   Map"
+            android:textAlignment="viewStart"
+            android:textSize="24sp" />
+
+        <Button
+            android:id="@+id/bt_near"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Nearby"
+            android:textAllCaps="false" />
+
+        <Button
+            android:id="@+id/bt_post"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Post"
+            android:textAllCaps="false" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
